[project]
name = "strain-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.44.1",
    "mediapipe>=0.10.21",
    "streamlit>=1.49.0",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-webrtc>=0.63.4",
]
