[project]
name = "strain-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.44.1",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "plyer>=2.1.0",
    "streamlit>=1.49.0",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-webrtc>=0.63.4",
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.2",
    "PyQt5-sip==12.17.0",
    "pyinstaller>=6.15.0",
]

